# lv_binding_micropython

./: .gitignore  .gitmodules  CLAUDE.md  DOCSTRING_PARSING.md  LVGL_DEVELOPMENT_NOTES.md  README.md  advanced_demo.py  bindings.cmake  gen_mpy.py  lv_conf.h  lv_mp.c  lv_mpy.c  lv_mpy_example.c  manifest.py  micropython.cmake  micropython.cmake-bak  micropython.mk  mkrules.cmake  mkrules_usermod.cmake
.github/workflows/: micropython_lvgl_ci.yml  unix_port.yml  unix_port_pr.yml  unix_port_push.yml
boards/: README.md
boards/generic_st7735/: landscape_128x128.py  landscape_128x160.py  portrait_128x128.py  portrait_128x160.py
boards/lilygo_tdisplay/: tdisplay_landscape.py  tdisplay_portrait.py
boards/lilygo_twatch_2020/: twatch_landscape.py  twatch_portrait.py
boards/m5stack_core/: m5stack_landscape.py  m5stack_portrait.py
boards/m5stack_core2/: core2_landscape.py  core2_portrait.py
driver/SDL/: SDL_keyboard.c  SDL_keyboard.h  SDL_monitor.c  SDL_monitor.h  SDL_mouse.c  SDL_mouse.h  lv_drv_conf.h  modSDL.c  sdl.c  sdl.h  sdl_common.c  sdl_common.h
driver/esp32/: espidf.c  espidf.h  ili9341.py  ili9XXX.py  lv_spi.py  modILI9341.c  modlvesp32.c  modrtch.c  modxpt2046.c  sdcard.py  sh2lib.c  sh2lib.h  xpt2046.py
driver/generic/: axp192.py  ft6x36.py  ili9xxx-test.py  ili9xxx.py  indev_example.py  lvindev_example.py  modlvindev.c  st77xx.py  xpt2046.py
driver/include/: common.h
driver/js/: imagetools.py  lv_timer.py
driver/linux/: evdev.py  (+3 more)
examples/: Dynamic_loading_font_example.py  README.md  advanced_demo.py  chart_anim_example.py  custom_widget_example.py  custom_widget_example1.py  example1.py  example2.py  example3.py  fb_test.py  generic-st77xx-with-xpt2046.py  generic-st7xx-with-xpt2046.py  lv_example_chart_1.py  lv_example_chart_2.py  lv_example_label.py  lv_example_meter_1.py  lv_example_meter_2.py  lv_example_meter_3.py  png_example.py  uasyncio_example1.py
include/: lv_mp_port_soft_reset.h  lv_mp_root_pointers.h
lib/: async_utils.py  display_driver.py  display_driver_utils.py  fs_driver.py  imagetools.py  lv_utils.py  tpcal.py  tpcal_landscape.py  tpcal_portrait.py  utils.py
micropython/: advanced_demo.py  gen_mpy.py  lv_mpy.c  lv_mpy_example.c
stubs/: .gitignore  README.md  pyproject.toml
stubs/include/SDL2/: SDL.h
stubs/include/freetype2/: ft2build.h
stubs/include/freetype2/freetype/: freetype.h  ftcache.h  ftglyph.h  ftimage.h  ftmm.h  ftoutln.h  ftsizes.h  ftstroke.h
stubs/lvgl-stubs/: __init__.py
stubs/lvgl_stubs/: __init__.py  lvgl.pyi  test_module.pyi
tests/: README.md  __init__.py  hwdisplay.py  imageconvert.py  readme.txt  run.sh  run_test.py  testdisplay.py  testrunner.py
(+63 files in other folders)
